added miniproject 2 and 3

--- a/project/MC_dropout_adv.ipynb
+++ b/project/MC_dropout_adv.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Author : Sumanth Hegde\n",
+    "\n",
     "import os\n",
     "# optionally set gpu device id \n",
     "# os.environ['CUDA_VISIBLE_DEVICES']='2'"
@@ -27,8 +29,6 @@
     "\n",
     "#import necessary libraries\n",
     "import pickle\n",
-    "\n",
-    "\n",
     "import tensorflow as tf\n",
     "from keras import layers\n",
     "import keras \n",
