--- a/project/uncertainty_adv.ipynb
+++ b/project/uncertainty_adv.ipynb
@@ -2,52 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 325
-    },
-    "colab_type": "code",
-    "id": "xdMTe4vdTpU9",
-    "outputId": "2af8a9a0-3b70-47b3-9648-329962903981"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tue May 26 13:48:02 2020       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 440.82       Driver Version: 440.82       CUDA Version: 10.2     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  GeForce RTX 2070    Off  | 00000000:03:00.0 Off |                  N/A |\r\n",
-      "| 92%   88C    P2    95W / 185W |   5166MiB /  7982MiB |     87%      Default |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   1  GeForce RTX 2070    Off  | 00000000:04:00.0 Off |                  N/A |\r\n",
-      "| 25%   59C    P0    36W / 185W |      0MiB /  7982MiB |      0%      Default |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   2  GeForce GTX 108...  Off  | 00000000:05:00.0 Off |                  N/A |\r\n",
-      "| 36%   53C    P0    55W / 250W |      0MiB / 11176MiB |      3%      Default |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                       GPU Memory |\r\n",
-      "|  GPU       PID   Type   Process name                             Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "colab": {
@@ -74,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Author : Sumanth Hegde\n",
+    "\n",
     "import os\n",
     "os.environ['CUDA_VISIBLE_DEVICES']='2'"
    ]
